2001-03-21  Martin Baulig  <baulig@suse.de>

	* gnome-program.h (GNOME_PARAM_POPT_FLAGS, GNOME_PARAM_POPT_CONTEXT):
	New properties.

	* gnome-program.[ch]
	(gnome_program_module_register, gnome_program_module_registered,
	gnome_program_module_load): Removed the `GnomeProgram *' argument.
	(gnome_program_install_property): First argument is now
	`GnomeProgramClass *'.
	(GnomeModuleInfo): The `init_pass' function no longer has a
	`GnomeProgram *' argument, added `constructor' function.

2001-03-20  Martin Baulig  <baulig@suse.de>

	* gnome-program.[ch] (gnome_program_install_property): New
	function; allows you to add a property to the GnomeProgramClass.

	* gnome-program.h (GnomeFileDomain): New enum.
	(GNOME_PARAM_GNOME_PATH): New property.
	(gnome_program_locate_file): New function; this is a slightly
	modified version of gnome_file_locate().

	* gnome-util.h (gnome_*_file): Use gnome_program_locate_file().
	(gnome_file_domain_*): Removed.
	(g_file_exists): #define this to use g_file_test().

	* gnome-util.c (gnome_file_locate): Removed.
	(g_file_exists): Removed.

2001-03-20  Martin Baulig  <baulig@suse.de>

	* gnomelib-init.[ch] (gnome_program_get_human_readable_name):
	Moved to gnome-program.[ch].

	* gnomelib-init.h (LIBGNOME_PARAM_*, libgnome_param_*):
	Removed #defines and external declarations. There are corresponding
	`GNOME_PARAM_*' #defines in gnome-program.h which are the names
	of GnomeProgram's properties.

	* test-libgnome.c: Simple test program.

	* gnomelib-init2.[ch]: Removed, this is now gnome-program.[ch].

	* gnome-program.[ch]: New files. This implements a `GnomeProgram'
	GObject; most of the code is copied from gnomelib-init2.c, but
	removed all the GnomeAttribute stuff and use GParam's.

2001-02-28  Mikael Hallendal  <micke@codefactory.se>

	* libgnome/: Fixed includes (added glib.h and gnome-defs.h
	to the files needing it. Those are: gnome-config.h, gnome-ditem.h,
	gnome-exec.h, gnome-fileconvert.h, gnome-i18n.h, gnome-regex.h,