@@ -1,5 +1,11 @@
 2001-03-21  Martin Baulig  <baulig@suse.de>
 
+	* Makefile.am: We're now in the new libgnome-2 module.
+	(bin_PROGRAMS): Don't build gnome-moz-remote for the moment since
+	it depends on X.
+
+2001-03-21  Martin Baulig  <baulig@suse.de>
+
 	* gnome-program.h (GNOME_PARAM_POPT_FLAGS, GNOME_PARAM_POPT_CONTEXT):
 	New properties.
 
